--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "pdf-lib": "^1.17.1",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-cropper": "^2.3.3",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -104,11 +105,13 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-hook-form": "^7.52.1",
     "react-hooks-global-state": "^2.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "3.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.7",
     "react-responsive": "^10.0.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-use-audio-player": "^3.0.2",
     "recharts": "^2.15.1",
