--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.10",
+    "@react-three/fiber": "^9.1.2",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.20.6",
@@ -123,6 +124,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "uploadthing": "^7.4.4",
     "uuid": "^11.0.4",
     "vaul": "^0.8.9",
@@ -139,6 +141,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/three": "^0.176.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
