--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-responsive": "^10.0.0",
     "react-scroll-parallax": "^3.4.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^5.28.1",
     "react-use-audio-player": "^3.0.2",
     "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
