Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-drizzle": "1.0.7",
     "@monaco-editor/react": "^4.6.0",
+    "@nivo/bar": "^0.93.0",
+    "@nivo/core": "^0.93.0",
+    "@nivo/line": "^0.93.0",
+    "@nivo/pie": "^0.93.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -115,6 +119,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.28.1",
+    "react-use": "^17.6.0",
     "react-use-audio-player": "^3.0.2",
     "recharts": "^2.15.1",
     "rehype-raw": "^7.0.0",
