--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@nivo/bar": "^0.93.0",
     "@nivo/core": "^0.93.0",
+    "@nivo/funnel": "^0.93.0",
     "@nivo/line": "^0.93.0",
     "@nivo/pie": "^0.93.0",
     "@radix-ui/react-accordion": "^1.2.2",
