--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "arctic": "^1.9.2",
     "axios": "^1.7.9",
     "bullmq": "^5.34.10",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -103,6 +104,7 @@
     "pdf-lib": "^1.17.1",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-cropper": "^2.3.3",
     "react-day-picker": "8.10.1",
