--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "next": "^14.2.5",
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.14",
     "oslo": "^1.2.1",
