--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "drizzle-kit": "^0.23.0",
     "drizzle-orm": "^0.32.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-next": "^0.0.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
