--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "next-seo": "^6.6.0",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.14",
+    "ol": "^10.5.0",
     "oslo": "^1.2.1",
     "pdf-lib": "^1.17.1",
     "postgres": "^3.4.4",
@@ -118,6 +119,7 @@
     "react-leaflet": "3.2.0",
     "react-leaflet-draw": "^0.20.4",
     "react-markdown": "^9.0.1",
+    "react-openlayers": "^10.2.0",
     "react-resizable-panels": "^2.1.7",
     "react-responsive": "^10.0.0",
     "react-scroll-parallax": "^3.4.5",
