--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "ioredis": "^5.4.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^3.8.4",
-    "leaflet": "1.6.0",
+    "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lucia": "3.2.0",
     "lucide-react": "^0.468.0",
@@ -118,7 +118,7 @@
     "react-hook-form": "^7.52.1",
     "react-hooks-global-state": "^2.1.0",
     "react-intersection-observer": "^9.16.0",
-    "react-leaflet": "3.2.0",
+    "react-leaflet": "^4.0.0",
     "react-leaflet-draw": "^0.20.4",
     "react-markdown": "^9.0.1",
     "react-openlayers": "^10.2.0",
